<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    tools:context=".ForgotResetpassword">

    <ImageView
        android:contentDescription="@string/this_is_the_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/bg6" />

    <ImageView
        android:contentDescription="@string/this_is_the_applogo"
        android:id="@+id/logoimageresetpass"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logog_round" />


    <TextView
        android:id="@+id/headingresetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoimageresetpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/forgotpassword"
        android:textAlignment="center"
        android:textColor="@color/whiteTextColor"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/useremailreset"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headingresetpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@color/whiteTextColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnresetpass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/useremailreset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/resetpass"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/registerlinkresetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnresetpass"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/loginlinkresetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnresetpass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@id/registerlinkresetpass"
        android:text="@string/register_here"
        android:textColor="@color/colorPrimaryDark"
        android:layout_toEndOf="@id/registerlinkresetpass" />

</RelativeLayout>