<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="#99000000">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/bg3"
        android:contentDescription="@string/this_is_the_background_image" />

    <ImageView
        android:contentDescription="@string/this_is_the_applogo"
        android:id="@+id/logoimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logog_round" />


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoimage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usenname"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#fff"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/whiteTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillogin"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usenname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:textColorHint="@color/whiteTextColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passlogin"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emaillogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@color/whiteTextColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passlogin2"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/whiteTextColor" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/registerbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passlogin2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/loginlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/have_an_account_login_here"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>