<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#99000000">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/bg2"
        android:contentDescription="@string/this_is_the_background_image" />

    <ImageView
        android:contentDescription="@string/this_is_the_applogo"
        android:id="@+id/logoimage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/logog_round" />




    <TextView
        android:layout_below="@+id/logoimage"
        android:id="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/login"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillogin"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp"
        android:textColorHint="@color/whiteTextColor" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passlogin"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emaillogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:boxStrokeWidth="2dp"
        android:textColorHint="@color/whiteTextColor" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
/>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passlogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/login" />

    <TextView
        android:id="@+id/registerlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/have_no_account_register_here"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>