<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFrag">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:contentDescription="@string/this_is_the_background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/bg2" />

        <ImageView
            android:id="@+id/logoimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/this_is_the_applogo"
            android:src="@mipmap/logog_round" />


        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logoimage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaillogin"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heading"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/whiteTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_phone_number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passlogin"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emaillogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/whiteTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/whiteTextColor" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginbtn"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:text="@string/have_no_account_register_here"
                android:textColor="@color/whiteTextColor" />

            <TextView
                android:id="@+id/resetpasswordlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60sp"
                android:text="@string/forgotpassword"
                android:textColor="@color/whiteTextColor" />

        </RelativeLayout>
    </RelativeLayout>

</FrameLayout>